// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`whisper_api > decode 1`] = `
{
  "segments": [
    {
      "end": 11.720000267028809,
      "id": 0,
      "start": 1.7200000286102295,
      "text": " Next movement, opening. Rotate your arms. Palms turn facing yourself. Lift up your arms.",
    },
    {
      "end": 20.360000610351562,
      "id": 1,
      "start": 12.880000114440918,
      "text": " Leads by your body. Upper arms, forearms to palms. Keep between arms shoulder-width apart.",
    },
    {
      "end": 29,
      "id": 2,
      "start": 20.559999465942383,
      "text": " Until your arms shoulder-level, go down, push. Start from body. Upper arms, forearms to palms.",
    },
    {
      "end": 38.70000076293945,
      "id": 3,
      "start": 29,
      "text": " And gradually setting your palms. Push to where? We say almost to the bottom.",
    },
    {
      "end": 44.86000061035156,
      "id": 4,
      "start": 39.459999084472656,
      "text": " Keep between arms, still shoulder-width apart. This is opening.",
    },
  ],
  "text": "Next movement, opening. Rotate your arms. Palms turn facing yourself. Lift up your arms. Leads by your body. Upper arms, forearms to palms. Keep between arms shoulder-width apart. Until your arms shoulder-level, go down, push. Start from body. Upper arms, forearms to palms. And gradually setting your palms. Push to where? We say almost to the bottom. Keep between arms, still shoulder-width apart. This is opening.",
  "words": [
    {
      "end": 2.5999999046325684,
      "start": 1.7200000286102295,
      "word": "Next",
    },
    {
      "end": 3.140000104904175,
      "start": 2.5999999046325684,
      "word": "movement",
    },
    {
      "end": 4.239999771118164,
      "start": 3.6600000858306885,
      "word": "opening",
    },
    {
      "end": 5.760000228881836,
      "start": 5.579999923706055,
      "word": "Rotate",
    },
    {
      "end": 6.639999866485596,
      "start": 5.760000228881836,
      "word": "your",
    },
    {
      "end": 6.639999866485596,
      "start": 6.639999866485596,
      "word": "arms",
    },
    {
      "end": 7.599999904632568,
      "start": 7.599999904632568,
      "word": "Palms",
    },
    {
      "end": 8.5600004196167,
      "start": 7.599999904632568,
      "word": "turn",
    },
    {
      "end": 8.979999542236328,
      "start": 8.5600004196167,
      "word": "facing",
    },
    {
      "end": 9.680000305175781,
      "start": 8.979999542236328,
      "word": "yourself",
    },
    {
      "end": 10.619999885559082,
      "start": 10.619999885559082,
      "word": "Lift",
    },
    {
      "end": 11.039999961853027,
      "start": 10.619999885559082,
      "word": "up",
    },
    {
      "end": 11.720000267028809,
      "start": 11.039999961853027,
      "word": "your",
    },
    {
      "end": 11.720000267028809,
      "start": 11.720000267028809,
      "word": "arms",
    },
    {
      "end": 12.880000114440918,
      "start": 12.880000114440918,
      "word": "Leads",
    },
    {
      "end": 13.359999656677246,
      "start": 12.880000114440918,
      "word": "by",
    },
    {
      "end": 13.84000015258789,
      "start": 13.359999656677246,
      "word": "your",
    },
    {
      "end": 14.65999984741211,
      "start": 13.84000015258789,
      "word": "body",
    },
    {
      "end": 15.779999732971191,
      "start": 15.779999732971191,
      "word": "Upper",
    },
    {
      "end": 16.079999923706055,
      "start": 15.779999732971191,
      "word": "arms",
    },
    {
      "end": 16.84000015258789,
      "start": 16.479999542236328,
      "word": "forearms",
    },
    {
      "end": 17.34000015258789,
      "start": 16.84000015258789,
      "word": "to",
    },
    {
      "end": 17.719999313354492,
      "start": 17.34000015258789,
      "word": "palms",
    },
    {
      "end": 18.579999923706055,
      "start": 18.34000015258789,
      "word": "Keep",
    },
    {
      "end": 19.020000457763672,
      "start": 18.579999923706055,
      "word": "between",
    },
    {
      "end": 19.299999237060547,
      "start": 19.020000457763672,
      "word": "arms",
    },
    {
      "end": 19.719999313354492,
      "start": 19.299999237060547,
      "word": "shoulder",
    },
    {
      "end": 19.959999084472656,
      "start": 19.719999313354492,
      "word": "width",
    },
    {
      "end": 20.360000610351562,
      "start": 19.959999084472656,
      "word": "apart",
    },
    {
      "end": 21.079999923706055,
      "start": 20.559999465942383,
      "word": "Until",
    },
    {
      "end": 21.3799991607666,
      "start": 21.079999923706055,
      "word": "your",
    },
    {
      "end": 21.799999237060547,
      "start": 21.3799991607666,
      "word": "arms",
    },
    {
      "end": 22.520000457763672,
      "start": 21.799999237060547,
      "word": "shoulder",
    },
    {
      "end": 22.84000015258789,
      "start": 22.520000457763672,
      "word": "level",
    },
    {
      "end": 23.860000610351562,
      "start": 23.65999984741211,
      "word": "go",
    },
    {
      "end": 24.34000015258789,
      "start": 23.860000610351562,
      "word": "down",
    },
    {
      "end": 24.8799991607666,
      "start": 24.579999923706055,
      "word": "push",
    },
    {
      "end": 25.600000381469727,
      "start": 25.520000457763672,
      "word": "Start",
    },
    {
      "end": 26.100000381469727,
      "start": 25.600000381469727,
      "word": "from",
    },
    {
      "end": 26.459999084472656,
      "start": 26.100000381469727,
      "word": "body",
    },
    {
      "end": 27.18000030517578,
      "start": 26.760000228881836,
      "word": "Upper",
    },
    {
      "end": 27.479999542236328,
      "start": 27.18000030517578,
      "word": "arms",
    },
    {
      "end": 28.18000030517578,
      "start": 27.860000610351562,
      "word": "forearms",
    },
    {
      "end": 29,
      "start": 28.18000030517578,
      "word": "to",
    },
    {
      "end": 29,
      "start": 29,
      "word": "palms",
    },
    {
      "end": 29.979999542236328,
      "start": 29,
      "word": "And",
    },
    {
      "end": 31.079999923706055,
      "start": 29.979999542236328,
      "word": "gradually",
    },
    {
      "end": 31.860000610351562,
      "start": 31.079999923706055,
      "word": "setting",
    },
    {
      "end": 32.34000015258789,
      "start": 31.860000610351562,
      "word": "your",
    },
    {
      "end": 32.7599983215332,
      "start": 32.34000015258789,
      "word": "palms",
    },
    {
      "end": 34.939998626708984,
      "start": 34.900001525878906,
      "word": "Push",
    },
    {
      "end": 35.2400016784668,
      "start": 34.939998626708984,
      "word": "to",
    },
    {
      "end": 35.540000915527344,
      "start": 35.2400016784668,
      "word": "where",
    },
    {
      "end": 36.900001525878906,
      "start": 36.400001525878906,
      "word": "We",
    },
    {
      "end": 37.20000076293945,
      "start": 36.900001525878906,
      "word": "say",
    },
    {
      "end": 37.7400016784668,
      "start": 37.20000076293945,
      "word": "almost",
    },
    {
      "end": 38.2400016784668,
      "start": 37.7400016784668,
      "word": "to",
    },
    {
      "end": 38.41999816894531,
      "start": 38.2400016784668,
      "word": "the",
    },
    {
      "end": 38.70000076293945,
      "start": 38.41999816894531,
      "word": "bottom",
    },
    {
      "end": 39.81999969482422,
      "start": 39.459999084472656,
      "word": "Keep",
    },
    {
      "end": 40.220001220703125,
      "start": 39.81999969482422,
      "word": "between",
    },
    {
      "end": 40.63999938964844,
      "start": 40.220001220703125,
      "word": "arms",
    },
    {
      "end": 41.459999084472656,
      "start": 41.060001373291016,
      "word": "still",
    },
    {
      "end": 42.2599983215332,
      "start": 41.459999084472656,
      "word": "shoulder",
    },
    {
      "end": 42.619998931884766,
      "start": 42.2599983215332,
      "word": "width",
    },
    {
      "end": 42.939998626708984,
      "start": 42.619998931884766,
      "word": "apart",
    },
    {
      "end": 43.880001068115234,
      "start": 43.63999938964844,
      "word": "This",
    },
    {
      "end": 44.380001068115234,
      "start": 43.880001068115234,
      "word": "is",
    },
    {
      "end": 44.86000061035156,
      "start": 44.380001068115234,
      "word": "opening",
    },
  ],
}
`;

exports[`whisper_api > transform 1`] = `
[
  {
    "end": 11.720000267028809,
    "id": 0,
    "start": 1.7200000286102295,
    "text": " Next movement, opening. Rotate your arms. Palms turn facing yourself. Lift up your arms.",
    "words": [
      {
        "end": 2.5999999046325684,
        "start": 1.7200000286102295,
        "word": " Next",
      },
      {
        "end": 3.140000104904175,
        "start": 2.5999999046325684,
        "word": " movement,",
      },
      {
        "end": 4.239999771118164,
        "start": 3.6600000858306885,
        "word": " opening.",
      },
      {
        "end": 5.760000228881836,
        "start": 5.579999923706055,
        "word": " Rotate",
      },
      {
        "end": 6.639999866485596,
        "start": 5.760000228881836,
        "word": " your",
      },
      {
        "end": 6.639999866485596,
        "start": 6.639999866485596,
        "word": " arms.",
      },
      {
        "end": 7.599999904632568,
        "start": 7.599999904632568,
        "word": " Palms",
      },
      {
        "end": 8.5600004196167,
        "start": 7.599999904632568,
        "word": " turn",
      },
      {
        "end": 8.979999542236328,
        "start": 8.5600004196167,
        "word": " facing",
      },
      {
        "end": 9.680000305175781,
        "start": 8.979999542236328,
        "word": " yourself.",
      },
      {
        "end": 10.619999885559082,
        "start": 10.619999885559082,
        "word": " Lift",
      },
      {
        "end": 11.039999961853027,
        "start": 10.619999885559082,
        "word": " up",
      },
      {
        "end": 11.720000267028809,
        "start": 11.039999961853027,
        "word": " your",
      },
      {
        "end": 11.720000267028809,
        "start": 11.720000267028809,
        "word": " arms.",
      },
    ],
  },
  {
    "end": 20.360000610351562,
    "id": 1,
    "start": 12.880000114440918,
    "text": " Leads by your body. Upper arms, forearms to palms. Keep between arms shoulder-width apart.",
    "words": [
      {
        "end": 12.880000114440918,
        "start": 12.880000114440918,
        "word": " Leads",
      },
      {
        "end": 13.359999656677246,
        "start": 12.880000114440918,
        "word": " by",
      },
      {
        "end": 13.84000015258789,
        "start": 13.359999656677246,
        "word": " your",
      },
      {
        "end": 14.65999984741211,
        "start": 13.84000015258789,
        "word": " body.",
      },
      {
        "end": 15.779999732971191,
        "start": 15.779999732971191,
        "word": " Upper",
      },
      {
        "end": 16.079999923706055,
        "start": 15.779999732971191,
        "word": " arms,",
      },
      {
        "end": 16.84000015258789,
        "start": 16.479999542236328,
        "word": " forearms",
      },
      {
        "end": 17.34000015258789,
        "start": 16.84000015258789,
        "word": " to",
      },
      {
        "end": 17.719999313354492,
        "start": 17.34000015258789,
        "word": " palms.",
      },
      {
        "end": 18.579999923706055,
        "start": 18.34000015258789,
        "word": " Keep",
      },
      {
        "end": 19.020000457763672,
        "start": 18.579999923706055,
        "word": " between",
      },
      {
        "end": 19.299999237060547,
        "start": 19.020000457763672,
        "word": " arms",
      },
      {
        "end": 19.719999313354492,
        "start": 19.299999237060547,
        "word": " shoulder-",
      },
      {
        "end": 19.959999084472656,
        "start": 19.719999313354492,
        "word": "width",
      },
      {
        "end": 20.360000610351562,
        "start": 19.959999084472656,
        "word": " apart.",
      },
    ],
  },
  {
    "end": 29,
    "id": 2,
    "start": 20.559999465942383,
    "text": " Until your arms shoulder-level, go down, push. Start from body. Upper arms, forearms to palms.",
    "words": [
      {
        "end": 21.079999923706055,
        "start": 20.559999465942383,
        "word": " Until",
      },
      {
        "end": 21.3799991607666,
        "start": 21.079999923706055,
        "word": " your",
      },
      {
        "end": 21.799999237060547,
        "start": 21.3799991607666,
        "word": " arms",
      },
      {
        "end": 22.520000457763672,
        "start": 21.799999237060547,
        "word": " shoulder-",
      },
      {
        "end": 22.84000015258789,
        "start": 22.520000457763672,
        "word": "level,",
      },
      {
        "end": 23.860000610351562,
        "start": 23.65999984741211,
        "word": " go",
      },
      {
        "end": 24.34000015258789,
        "start": 23.860000610351562,
        "word": " down,",
      },
      {
        "end": 24.8799991607666,
        "start": 24.579999923706055,
        "word": " push.",
      },
      {
        "end": 25.600000381469727,
        "start": 25.520000457763672,
        "word": " Start",
      },
      {
        "end": 26.100000381469727,
        "start": 25.600000381469727,
        "word": " from",
      },
      {
        "end": 26.459999084472656,
        "start": 26.100000381469727,
        "word": " body.",
      },
      {
        "end": 27.18000030517578,
        "start": 26.760000228881836,
        "word": " Upper",
      },
      {
        "end": 27.479999542236328,
        "start": 27.18000030517578,
        "word": " arms,",
      },
      {
        "end": 28.18000030517578,
        "start": 27.860000610351562,
        "word": " forearms",
      },
      {
        "end": 29,
        "start": 28.18000030517578,
        "word": " to",
      },
      {
        "end": 29,
        "start": 29,
        "word": " palms.",
      },
    ],
  },
  {
    "end": 38.70000076293945,
    "id": 3,
    "start": 29,
    "text": " And gradually setting your palms. Push to where? We say almost to the bottom.",
    "words": [
      {
        "end": 29.979999542236328,
        "start": 29,
        "word": " And",
      },
      {
        "end": 31.079999923706055,
        "start": 29.979999542236328,
        "word": " gradually",
      },
      {
        "end": 31.860000610351562,
        "start": 31.079999923706055,
        "word": " setting",
      },
      {
        "end": 32.34000015258789,
        "start": 31.860000610351562,
        "word": " your",
      },
      {
        "end": 32.7599983215332,
        "start": 32.34000015258789,
        "word": " palms.",
      },
      {
        "end": 34.939998626708984,
        "start": 34.900001525878906,
        "word": " Push",
      },
      {
        "end": 35.2400016784668,
        "start": 34.939998626708984,
        "word": " to",
      },
      {
        "end": 35.540000915527344,
        "start": 35.2400016784668,
        "word": " where?",
      },
      {
        "end": 36.900001525878906,
        "start": 36.400001525878906,
        "word": " We",
      },
      {
        "end": 37.20000076293945,
        "start": 36.900001525878906,
        "word": " say",
      },
      {
        "end": 37.7400016784668,
        "start": 37.20000076293945,
        "word": " almost",
      },
      {
        "end": 38.2400016784668,
        "start": 37.7400016784668,
        "word": " to",
      },
      {
        "end": 38.41999816894531,
        "start": 38.2400016784668,
        "word": " the",
      },
      {
        "end": 38.70000076293945,
        "start": 38.41999816894531,
        "word": " bottom.",
      },
    ],
  },
  {
    "end": 44.86000061035156,
    "id": 4,
    "start": 39.459999084472656,
    "text": " Keep between arms, still shoulder-width apart. This is opening.",
    "words": [
      {
        "end": 39.81999969482422,
        "start": 39.459999084472656,
        "word": " Keep",
      },
      {
        "end": 40.220001220703125,
        "start": 39.81999969482422,
        "word": " between",
      },
      {
        "end": 40.63999938964844,
        "start": 40.220001220703125,
        "word": " arms,",
      },
      {
        "end": 41.459999084472656,
        "start": 41.060001373291016,
        "word": " still",
      },
      {
        "end": 42.2599983215332,
        "start": 41.459999084472656,
        "word": " shoulder-",
      },
      {
        "end": 42.619998931884766,
        "start": 42.2599983215332,
        "word": "width",
      },
      {
        "end": 42.939998626708984,
        "start": 42.619998931884766,
        "word": " apart.",
      },
      {
        "end": 43.880001068115234,
        "start": 43.63999938964844,
        "word": " This",
      },
      {
        "end": 44.380001068115234,
        "start": 43.880001068115234,
        "word": " is",
      },
      {
        "end": 44.86000061035156,
        "start": 44.380001068115234,
        "word": " opening.",
      },
    ],
  },
]
`;
